--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="dummy_section_text">dummy_section_text</string>
+    <string name="desc_book_imageview">ImageView for book image</string>
 
 </resources>
